# ros2_agv_pc

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  entrypoint.sh  mainwindow.h  ros_machen.bash
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yaml
5.15.0/gcc_64/include/QtCore/: qconfig.h
5.15.0/gcc_64/lib/: Qt5RepParser.la  Qt5UiPlugin.la  libQt53DAnimation.la  libQt53DAnimation.prl  libQt53DCore.la  libQt53DCore.prl  libQt53DExtras.la  libQt53DExtras.prl  libQt53DInput.la  libQt53DInput.prl  libQt53DLogic.la  libQt53DLogic.prl  libQt53DQuick.la  libQt53DQuick.prl  libQt53DQuickAnimation.la  libQt53DQuickAnimation.prl  libQt53DQuickExtras.la  libQt53DQuickExtras.prl  libQt53DQuickInput.la  libQt53DQuickInput.prl  libQt53DQuickRender.la  libQt53DQuickRender.prl  libQt53DQuickScene2D.la  libQt53DQuickScene2D.prl  libQt53DRender.la  libQt53DRender.prl  libQt5AccessibilitySupport.la  libQt5AccessibilitySupport.prl  libQt5Bluetooth.la  libQt5Bluetooth.prl  libQt5Bluetooth.so.5.15  libQt5Bootstrap.la  libQt5Bootstrap.prl  libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Core.la  libQt5Core.prl  libQt5DBus.la  libQt5DBus.prl  libQt5Designer.la  (+143 more)
5.15.0/gcc_64/lib/cmake/Qt53DAnimation/: Qt53DAnimationConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DCore/: Qt53DCoreConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DExtras/: Qt53DExtrasConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DInput/: Qt53DInputConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DLogic/: Qt53DLogicConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuick/: Qt53DQuickConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuickAnimation/: Qt53DQuickAnimationConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuickExtras/: Qt53DQuickExtrasConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuickInput/: Qt53DQuickInputConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuickRender/: Qt53DQuickRenderConfig.cmake
5.15.0/gcc_64/lib/cmake/Qt53DQuickScene2D/: Qt53DQuickScene2DConfig.cmake
5.15.0/gcc_64/lib/pkgconfig/: Qt53DAnimation.pc  Qt53DCore.pc  Qt53DExtras.pc  Qt53DInput.pc  Qt53DLogic.pc  Qt53DQuick.pc  Qt53DQuickAnimation.pc  Qt53DQuickExtras.pc  Qt53DQuickInput.pc  Qt53DQuickRender.pc  Qt53DQuickScene2D.pc  Qt53DRender.pc  Qt5Bluetooth.pc  Qt5Concurrent.pc  Qt5Core.pc  Qt5DBus.pc  Qt5Designer.pc  Qt5Gamepad.pc  Qt5Gui.pc  Qt5Help.pc  Qt5Location.pc  Qt5Multimedia.pc  Qt5MultimediaWidgets.pc  Qt5Network.pc  Qt5Nfc.pc  Qt5OpenGL.pc  Qt5OpenGLExtensions.pc  Qt5Positioning.pc  Qt5PositioningQuick.pc  Qt5PrintSupport.pc  Qt5Qml.pc  Qt5QmlModels.pc  Qt5QmlWorkerScript.pc  Qt5Quick.pc  Qt5QuickControls2.pc  Qt5QuickTemplates2.pc  Qt5QuickTest.pc  Qt5QuickWidgets.pc  Qt5RemoteObjects.pc  Qt5RepParser.pc  (+18 more)
5.15.0/gcc_64/mkspecs/: qconfig.pri
5.15.0/gcc_64/mkspecs/modules/: qt_lib_3danimation.pri  qt_lib_3danimation_private.pri  qt_lib_3dcore.pri  qt_lib_3dcore_private.pri  qt_lib_3dextras.pri  qt_lib_3dextras_private.pri  qt_lib_3dinput.pri  qt_lib_3dinput_private.pri  qt_lib_3dlogic.pri  qt_lib_3dlogic_private.pri  qt_lib_3dquick.pri  qt_lib_3dquick_private.pri  qt_lib_3dquickanimation.pri  qt_lib_3dquickanimation_private.pri  qt_lib_3dquickextras.pri  qt_lib_3dquickextras_private.pri  qt_lib_3dquickinput.pri  qt_lib_3dquickinput_private.pri  qt_lib_3dquickrender.pri  qt_lib_3dquickrender_private.pri  qt_lib_3dquickscene2d.pri  qt_lib_3dquickscene2d_private.pri  qt_lib_3drender.pri  qt_lib_3drender_private.pri  qt_lib_bluetooth.pri  qt_lib_bluetooth_private.pri  qt_lib_core_private.pri  qt_lib_gamepad.pri  qt_lib_gamepad_private.pri  qt_lib_glx_support_private.pri  qt_lib_gui.pri  qt_lib_gui_private.pri  qt_lib_linuxaccessibility_support_private.pri  qt_lib_location.pri  qt_lib_location_private.pri  qt_lib_multimedia.pri  qt_lib_multimedia_private.pri  qt_lib_multimediagsttools_private.pri  qt_lib_multimediawidgets.pri  qt_lib_multimediawidgets_private.pri  (+42 more)
Tools/Conan/.conan/profiles/: qt-5.15.0-linux
src/AGV_URDF_ROS_model_description/: CMakeLists.txt  package.xml
src/AGV_URDF_ROS_model_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
src/AGV_URDF_ROS_model_description/meshes/: FrontSensors_1.stl
src/AGV_URDF_ROS_model_description/urdf/: AGV_URDF_ROS_model.gazebo  AGV_URDF_ROS_model.trans  AGV_URDF_ROS_model.xacro  materials.xacro
src/AGV_simulator_description/: setup.cfg  setup.py
src/AGV_simulator_description/meshes/: BackSensors_1_1.stl  back_right_1_1.stl  base_link.stl  front_right_1_1.stl
src/AGV_simulator_description/urdf/: AGV_simulator.gazebo  AGV_simulator.trans  AGV_simulator.xacro
src/agv_mcu_package/: CMakeLists.txt
src/agv_mcu_package/src/: stm32_bridge.cpp
src/agv_sensor_package/: CMakeLists.txt  LICENSE  package.xml
src/agv_sensor_package/include/agv_sensor_package/: oak_d_publisher.hpp
src/agv_sensor_package/src/: oak_d_publisher.cpp
src/cpp_demo_pub/: CMakeLists.txt  package.xml
src/cpp_demo_pub/src/: cpp_demo_pub.cpp
src/cpp_pubsub/src/: subscriber_member_function.cpp
src/cpp_qt_app/: CMakeLists.txt  package.xml
src/cpp_qt_app/include/: mainwindow.h
src/cpp_qt_app/qml/: main.qml
src/cpp_qt_app/src/: cameras.cpp  cameras.h  cameras.ui  control.cpp  control.h  control.ui  image_receiver.cpp  image_receiver.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qnode.cpp  qnode.h  settings.cpp  settings.h  settings.ui
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/interfaces/: CMakeLists.txt
src/log/: latest_build
src/publisher_pkg/: CMakeLists.txt  package.xml
src/publisher_pkg/src/: publisher_exp.cpp
src/py_qt_app/: package.xml  setup.cfg  setup.py
src/py_qt_app/py_qt_app/: main_qt.py
src/subpkg/: CMakeLists.txt  package.xml
src/subpkg/src/: steer_sub.cpp
src/textual_gui_pkg/: setup.cfg  setup.py
src/textual_gui_pkg/textual_gui_pkg/: moteus_app.tcss  tui_2.py  tui_topic.py
src/textual_gui_pkg/textual_gui_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/textual_gui_pkg/textual_gui_pkg/log/: latest_build
(+143 files in other folders)
